Fix T55175: outliner "Show Active" not working.